--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
 
   "repository": {
@@ -27,14 +26,14 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "validator": "^13.15.15"
-  }
+  },
   "bugs": {
     "url": "https://github.com/saumya1620/webdev-project/issues"
   },
   "homepage": "https://github.com/saumya1620/webdev-project#readme",
   "dependencies": {
     "express": "^5.1.0"
-  }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
