--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
